# pymks

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .travis.yml  ABSTRACT.md  ADMINISTRATA.md  API.html  ARX.py  CALL.md  CITATION.md  CITATION.txt  CNAME  CREDITS.md  DDHO.2.csv  DOCKER.md  Dockerfile  EXAMPLES.html  INSTALLATION.md  LICENSE  LICENSE.md  LICENSE.txt  MANIFEST.in  MKS_Spinoidal.ipynb  MKSmodels.html  README.md  README_ISSUE236_BRANCH  REQUIREMENTS.md  REQUIREMENTS.txt  THEORY.html  Time_MKS_Example.py  TransferFunction.py  abstract.md  bases.html  books.txt  datageneration.html  default.nix  docker.nix  domain.vtk  environment.yml  (+30 more)
.circleci/: config.yml
.github/: stale.yml
_sources/: API.txt  EXAMPLES.txt  bases.txt  index.txt  intro.txt
bibliography/: biblio.bib
cythonizeGraspi/: graspi.cpp  graspi.pxd
doc/: API.rst  EXAMPLES.rst  MKSmodels.rst  Makefile  THEORY.rst  bases.rst  conf.py  contents.rst  datageneration.rst  homogenization.rst  index.rst  intro.rst  localization.rst  requirements.txt  shell.nix  spatial_statistics.rst  spatial_stats.rst  structure_analysis.rst  support.rst  testing.rst  tools.rst
docs/: index.html
elasticity/: elastic.py  elasticity.ipynb  linear_elastic.py
fmks/: __init__.py  bases.ipynb  bases.py  data.txt  fext.py  func.py  legendre.py  localization.py
graspi/: LICENSE.txt  README.md  ReadmeCythonizedGraspi.txt  setup.py  shell.nix
nix/: black.nix  dask-glm.nix  dask-ml.nix  dask-searchcv.nix  dev.nix  distributed.nix  dklearn.nix  nbval.nix  nixpkgs_version.nix  pytest-cov.nix  scipy.nix  sfepy.nix  sklearn.nix  toml.nix
notebooks/: 00 - Workshop Overview.ipynb  01 - MKS Intro.ipynb  01 - Python Intro.ipynb  02 - MKS Intro.ipynb  02 - Simple Filter.ipynb  03 - Cross Validation.ipynb  03 - Simple Filter.ipynb  04 - Cross Validation.ipynb  04 - Scaling Coefficients.ipynb  05 - Scaling Coefficients.ipynb  06 - Improving Performance.ipynb  Derivation of MKS - Elasiticity.ipynb  Fiber Homogenization.ipynb  Ising model.ipynb  Large_Case_Study.ipynb  Legendre.ipynb  MD.ipynb  MKS_Spinoidal.ipynb  PCA.ipynb  Polynomials.ipynb  SimpleMKSFilter.ipynb  Solutions.ipynb  Untitled.ipynb  (+67 more)
(+971 files in other folders)
