[metadata]
name = pymks
description-file = README.md
description = Materials Knowledge Systems in Python (PyMKS)
author = Daniel Wheeler
author_email = daniel.wheeler2@gmail.com
url = http://pymks.org
license_files = LICENSE.md

[options]
install_requires =
    pytest
    numpy
    dask
    Deprecated
    matplotlib
    scikit-learn
    pytest-cov
    nbval
    toolz
    pandas

[tool:pytest]
testpaths = pymks/fmks notebooks
addopts = --doctest-modules --ignore=setup.py --ignore=sandbox -r s --cov-config .coveragerc --cov=pymks/fmks --cov-report term-missing --nbval --sanitize-with notebooks/sanitize.cfg --no-cov-on-fail

[pymks]
use-fftw = false

[flake8]
ignore = E731, W503
max-line-length = 88

[versioneer]
VCS = git
style = pep440
versionfile_source = pymks/_version.py
versionfile_build = pymks/_version.py
tag_prefix = v
parentdir_prefix =
